--- a/style.css
+++ b/style.css
@@ -2,21 +2,24 @@
 /* ========== I. Global Styles
 /* ========== II. Hero Section Styles
 /* ========== III. Filters Section Styles 
-/* ========== IV. Photo Catalog Section Styles 
-/* ========== V. Button "Load More" Styles 
-/* ========== VI. Contact Modal 
-/* ========== VII. Elementor Menu mobile
-/* ========== VIII. Responsive style (mobile)
+/* ========== IV. Photo Catalog Section Styles
+/* ========== V. Lightbox
+/* ========== VI. Button "Load More" Styles 
+/* ========== VII. Contact Modal 
+/* ========== VIII. Contact Modal (Single.php)
+/* ========== IX. Page Single photo 
+/* ========== X. Elementor Menu mobile
+/* ========== XI. Responsive style (mobile)
 
 
-
+/* ====================================================== */
 /* ========== I. Global Styles ========== */
+/* ====================================================== */
 
 
 body {
     margin: 0;
     padding: 0;
-    font-family: Arial, sans-serif;
 }
 
 /* Style H1 pour desktop */
@@ -68,8 +71,10 @@ p {
     text-align: left;
 }
 
-
+/* ====================================================== */
 /* ========== II. Hero Section Styles ========== */
+/* ====================================================== */
+
 
 /* La section du Hero occupe toute la largeur et la hauteur de l'écran */
 .hero-section {
@@ -108,8 +113,11 @@ p {
 }
 
 
-
+/* ====================================================== */
 /* ========== III. Filters Section Styles ========== */
+/* ====================================================== */
+
+
 
 /* Section des filtres */
 .filters-section {
@@ -160,8 +168,13 @@ p {
 
 
 
-
+/* ====================================================== */
 /* ========== IV. Photo Catalog Section Styles ========== */
+/* ====================================================== */
+
+
+
+
 /* Conteneur du catalogue photo */
 #photo-catalog {
     width: 1148px;
@@ -237,6 +250,7 @@ p {
     position: absolute;
     font-size: 14px;
     color: white;
+    text-transform: uppercase;
 }
 
 .photo-reference {
@@ -264,6 +278,15 @@ p {
     display: block;
 }
 
+
+
+/* ====================================================== */
+/* ========== V. Lightbox ========== */
+/* ====================================================== */
+
+
+
+
 /* Styles de la lightbox */
 .lightbox {
     position: fixed;
@@ -290,7 +313,7 @@ p {
     max-width: 80%;
     max-height: 80%;
     z-index: 1010; 
-    box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.5);
+    box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.8);
     border-radius: 5px;
     margin: 0 auto;
     display: block;
@@ -355,7 +378,12 @@ p {
 }
 
 
-/* ========== V. Button "Load More" Styles ========== */
+
+/* ====================================================== */
+/* ========== VI. Button "Load More" Styles ========== */
+/* ====================================================== */
+
+
 
 /* Conteneur pour le bouton Charger plus */
 .view-all-button {
@@ -387,7 +415,11 @@ p {
 
 
 
-/* ========== VI. Contact Modal ========== */
+/* ====================================================== */
+/* ========== VII. Contact Modal ========== */
+/* ====================================================== */
+
+
 
 /* Style général du conteneur du formulaire */
 .custom-form {
@@ -507,27 +539,14 @@ p {
 }
 
 
-/* ========== VII. Contact Modal (Single) ========== */
+
+/* ====================================================== */
+/* ========== VIII. Contact Modal (Single.php) ========== */
+/* ====================================================== */
+
+
 
 /* Styles pour la deuxième modale */
-
-#contactModal {
-    display: none; /* Cacher la modale par défaut */
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background-color: rgba(0, 0, 0, 0.8); /* Overlay semi-transparent */
-}
-
-.modal-content {
-    position: relative;
-    margin: 10% auto;
-    padding: 20px;
-    width: 50%;
-    background-color: white;
-}
 
 .close-modal {
     position: absolute;
@@ -597,8 +616,9 @@ p {
 }
 
 
-
-/* ========== VIII. Page single photo ========== */
+/* ====================================================== */
+/* ========== IX. Page single photo ========== */
+/* ====================================================== */
 
 
 /* Styles généraux pour la page single photo */
@@ -794,7 +814,14 @@ p {
     }
 }
 
-/* ========== VII. Elementor Menu mobile ========== */
+
+
+/* ====================================================== */
+/* ========== X. Elementor Menu mobile ========== */
+/* ====================================================== */
+
+
+
 
 /* Masque l'icône du menu burger sur les écrans plus grands que 768px */
 #elementor-menu-toggle {
@@ -860,7 +887,13 @@ body.elementor-nav-menu--open {
 }
 
 
-/* ========== VIII. Responsive Styles ========== */
+
+/* ====================================================== */
+/* ========== XI. Responsive Styles ========== */
+/* ====================================================== */
+
+
+
 
 /* Appliquer les styles mobiles à partir de 768px de large */
 @media (max-width: 768px) {
